--- a/_posts/2024-01-09-filetype.md
+++ b/_posts/2024-01-09-filetype.md
@@ -20,11 +20,11 @@ By choosing simpler formats, I become less dependent on companies' platforms. I 
 The apps I use now are vehicles for opening files. Currently, my main vehicle is [Obsidian](https://obsidian.md). I enjoy its simple UI, file-reading capabilities, and its devoted community. I know the tools I use won't last forever, and I don't need them to. My plaintext files will be fine in whatever tool comes next.
 
 ### Tools of choice:
-> [Obsidian](https://obsidian.md)
-> [Helix Editor](https://helix-editor.com)
-> [Github Desktop](https://desktop.github.com)
-> [iCloud](https://www.icloud.com)
+> - [Obsidian](https://obsidian.md)
+> - [Helix Editor](https://helix-editor.com)
+> - [Github Desktop](https://desktop.github.com)
+> - [iCloud](https://www.icloud.com)
 
 ### Recommended reading:
-> [Steph Ango, File Over App](https://stephango.com/file-over-app) (1 minute read)
-> [Derek Sivers, Plain Text](https://sive.rs/plaintext) (5 minute read)
+> - [Steph Ango, File Over App](https://stephango.com/file-over-app) (1 minute read)
+> - [Derek Sivers, Plain Text](https://sive.rs/plaintext) (5 minute read)
