Mass update posts

--- a/_posts/2024-02-10-email.md
+++ b/_posts/2024-02-10-email.md
@@ -2,7 +2,7 @@
 layout: post
 title: Email
 author: Caleb Jolliffe
-stamp: 02 · 24
+stamp: 02-24
 permalink: /email/
 imagecard: email.png
 handle: calebjolliffe
