--- a/_posts/2024-01-09-filetype.md
+++ b/_posts/2024-01-09-filetype.md
@@ -2,7 +2,7 @@
 layout: post
 title: Filetype
 author: Caleb Jolliffe
-stamp: 01·24
+stamp: 01-24
 permalink: /filetype/
 imagecard: vehicle.png
 handle: calebjolliffe
