--- a/_posts/2024-01-09-filetype.md
+++ b/_posts/2024-01-09-filetype.md
@@ -4,7 +4,7 @@ title: Filetype
 author: Caleb Jolliffe
 stamp: 01-24
 permalink: /filetype/
-imagecard: vehicle.png
+imagecard: filetype.png
 handle: calebjolliffe
 xdesc: At the end of 2023, inspired by Steph Ango's file over app philosophy, I began taking control of my digital life. I ditched proprietary platforms in favour of something much simpler...
 ---
