--- a/_posts/2024-02-10-email.md
+++ b/_posts/2024-02-10-email.md
@@ -28,6 +28,6 @@ For the top bar buttons, I'm currently using Carl's setup. This will likely chan
 That's my minimalist email setup. Consider showing Carl and Manu some love, my setup would not exist without their setups. If you found value in this, you might like my writing about using plaintext and Markdown, linked below.
 
 ### Recommended reading:
-- [Carl Barenbrug, Minimal Email Setup](https://carlbarenbrug.com/minimal-email-setup) (2 minute read)
-- [Manuel Moreale, Minimal Email Setup](https://manuelmoreale.com/emails) (4 minute read)
-- [Caleb Jolliffe, Filetype](/filetype/) (2 minute read)
+- → [Carl Barenbrug, Minimal Email Setup](https://carlbarenbrug.com/minimal-email-setup)
+- → [Manuel Moreale, Minimal Email Setup](https://manuelmoreale.com/emails)
+- → [Caleb Jolliffe, Filetype](/filetype/)
