Test updated layout

--- a/_posts/2024-01-09-filetype.md
+++ b/_posts/2024-01-09-filetype.md
@@ -3,6 +3,7 @@ layout: post
 title: Filetype
 author: Caleb Jolliffe
 stamp: 01-24
+read: 2\
 permalink: /filetype/
 imagecard: filetype.png
 handle: calebjolliffe
