--- a/_posts/2024-02-10-email.md
+++ b/_posts/2024-02-10-email.md
@@ -3,6 +3,7 @@ layout: post
 title: Email
 author: Caleb Jolliffe
 stamp: 02-24
+read: 1
 permalink: /email/
 imagecard: email.png
 handle: calebjolliffe
