Making formatting consistent

--- a/_posts/2024-01-09-filetype.md
+++ b/_posts/2024-01-09-filetype.md
@@ -26,6 +26,6 @@ The apps I use now are vehicles for opening files. Currently, my main vehicle is
 > - → [Github Desktop](https://desktop.github.com)
 > - → [iCloud](https://www.icloud.com)
 
-### Recommended reading:
+### Further reading:
 > - → [Steph Ango, File Over App](https://stephango.com/file-over-app) (1 minute read)
 > - → [Derek Sivers, Plain Text](https://sive.rs/plaintext) (5 minute read)
