Deploy local test instance

--- a/_posts/2024-02-24-email.md
+++ b/_posts/2024-02-24-email.md
@@ -1,14 +1,13 @@
 ---
 layout: post
 title: Email
-author: Caleb Jolliffe
-stamp: 02-24
-read: 1
 permalink: /email/
-imagecard: email.png
-handle: calebjolliffe
-xdesc: Email is one of the greatest sources of anxiety in my daily work. For years, I assumed my anxiety stemmed from "too many emails". It doesn't. The typical email client UI is visually chaotic at best—I was avoiding the UI, not the emails. Could I change that?
+read: 1
 ---
+
+{{ page.title }}
+================
+<p class="meta">24 February 2024 &bull; {{ page.read }} minute read</p>
 
 > This is a follow-up to [Manu's](https://manuelmoreale.com/emails) and [Carl's](https://carlbarenbrug.com/minimal-email-setup) articles on creating a minimal email setup. In this, I'll talk about my personal experiences and share my own setup.*
 
@@ -16,7 +15,7 @@ Email is one of the greatest sources of anxiety in my daily work. For years, I a
 
 Like Manu and Carl, I'm using Apple's native Mail app. I don't receive a high volume of emails, and I prefer my inboxes stay organized. I aim to end each week by hitting Inbox 0. If this isn't you, you likely won't find value in this setup.
 
-### The Inbox
+## The Inbox
 
 I prefer my inboxes empty. The less that's in my inbox, the less actions on my plate. My setup pairs Manu's excellent tutorial with Carl's brutalism, then adds my own spin.
 
@@ -26,7 +25,7 @@ For the top bar buttons, I'm currently using Carl's setup. This will likely chan
 
 That's my minimalist email setup. Consider showing Carl and Manu some love, my setup would not exist without their setups. If you found value in this, you might like my writing about using plaintext and Markdown, linked below.
 
-### Further reading:
-> - → [Carl Barenbrug, Minimal Email Setup](https://carlbarenbrug.com/minimal-email-setup)
-> - → [Manuel Moreale, Minimal Email Setup](https://manuelmoreale.com/emails)
-> - → [Caleb Jolliffe, Filetype](/filetype/)
+## Further reading:
+> - [Carl Barenbrug, Minimal Email Setup](https://carlbarenbrug.com/minimal-email-setup)
+> - [Manuel Moreale, Minimal Email Setup](https://manuelmoreale.com/emails)
+> - [Caleb Jolliffe, Filetype](https://calebjolliffe.co/filetype/)
