--- a/_posts/2024-01-09-filetype.md
+++ b/_posts/2024-01-09-filetype.md
@@ -1,14 +1,13 @@
 ---
 layout: post
 title: Filetype
-author: Caleb Jolliffe
-stamp: 01-24
-read: 2
 permalink: /filetype/
-imagecard: filetype.png
-handle: calebjolliffe
-xdesc: At the end of 2023, inspired by Steph Ango's file over app philosophy, I began taking control of my digital life. I ditched proprietary platforms in favour of something much simpler...
+read: 2
 ---
+
+{{ page.title }}
+================
+<p class="meta">09 January 2024 &bull; {{ page.read }} minute read</p>
 
 At the end of 2023, inspired by Steph Ango's [file over app](https://stephango.com/file-over-app) philosophy, I began taking control of my digital life.
 
@@ -20,12 +19,12 @@ By choosing simpler formats, I become less dependent on companies' platforms. I 
 
 The apps I use now are vehicles for opening files. Currently, my main vehicle is [Obsidian](https://obsidian.md). I enjoy its simple UI, file-reading capabilities, and its devoted community. I know the tools I use won't last forever, and I don't need them to. My plaintext files will be fine in whatever tool comes next.
 
-### Tools of choice:
-> - → [Obsidian](https://obsidian.md)
-> - → [Helix Editor](https://helix-editor.com)
-> - → [Github Desktop](https://desktop.github.com)
-> - → [iCloud](https://www.icloud.com)
+## Tools of choice:
+> - [Obsidian](https://obsidian.md)
+> - [Helix Editor](https://helix-editor.com)
+> - [Github Desktop](https://desktop.github.com)
+> - [iCloud](https://www.icloud.com)
 
-### Further reading:
-> - → [Steph Ango, File Over App](https://stephango.com/file-over-app) (1 minute read)
-> - → [Derek Sivers, Plain Text](https://sive.rs/plaintext) (5 minute read)
+## Further reading:
+> - [Steph Ango, File Over App](https://stephango.com/file-over-app)
+> - [Derek Sivers, Plain Text](https://sive.rs/plaintext)
