--- a/_posts/2024-03-06-quit.md
+++ b/_posts/2024-03-06-quit.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: Quit
-author: Caleb Jolliffe
-stamp: 03·24
+title: Quit (While You're On Top)
 permalink: /quit/
-imagecard: quit.png
-handle: calebjolliffe
-xdesc: I've been employing a controversial strategy to strengthen my deep work sessions. When I notice my flow state has gone on "too long", I quit while I'm on top of things. There's a few reasons for this...
+read: 2
 ---
+
+{{ page.title }}
+================
+<p class="meta">06 March 2024 &bull; {{ page.read }} minute read</p>
 
 I've been employing a controversial strategy to strengthen my deep work sessions. When I notice my flow state has gone on "too long", I quit while I'm on top of things. I shut my laptop down for the night and switch over to analog activities. There's a few reasons for this:
 
@@ -21,23 +21,24 @@ I start each bridge entry with the date and a simple reflection: "Today, I..." I
 
 A recent Friday bridge entry looked like this (information redacted for privacy):
 
-> HEMINGWAY BRIDGE — [DATE]
-> Today I made a lot of progress on [PROJECT]. I'm really proud of where I got to, and I'm excited to keep working on it on Monday. I got the [TASK] completed, although I do want to make some adjustments to the structure. Today was mostly about getting functionality going, which I did! I'm so proud of myself for figuring out [MASSIVE, ANNOYING PROBLEM].
+> HEMINGWAY BRIDGE - (DATE)
+> 
+> Today I made a lot of progress on (PROJECT). I'm really proud of where I got to, and I'm excited to keep working on it on Monday. I got the (TASK) completed, although I do want to make some adjustments to the structure. Today was mostly about getting functionality going, which I did! I'm so proud of myself for figuring out (MASSIVE, ANNOYING PROBLEM).
 > 
-> I'll be continuing to reference [RESOURCE] next week, and pulling from [DETAIL] to make the changes that I want to see. This way, [PROJECT] should [FUNCTION] better since I'll be using primarily [TOOL] to build the [PROJECT].
+> I'll be continuing to reference (RESOURCE) next week, and pulling from (DETAIL) to make the changes that I want to see. This way, (PROJECT) should (FUNCTION) better since I'll be using primarily (TOOL) to build the (PROJECT).
 > 
-> I will continue working through [PROJECT BACKLOG] on Monday, starting with the tweaks to [TASK]. By refactoring the [TASK] code to the new structure, I anticipate it becoming easier and faster to complete [REMAINING TASKS] within a week or two.
+> I will continue working through (PROJECT BACKLOG) on Monday, starting with the tweaks to (TASK). By refactoring the (TASK) code to the new structure, I anticipate it becoming easier and faster to complete (REMAINING TASKS) within a week or two.
 > 
 > On Monday, I will:
-> - Use [RESOURCE] to refactor [TASK] code
-> - Tweak [TASK] as described in [PROJECT BACKLOG]
-> - Use [RESOURCE] to begin developing [NEXT TASK]
+> - Use (RESOURCE) to refactor (TASK) code
+> - Tweak (TASK) as described in (PROJECT BACKLOG)
+> - Use (RESOURCE) to begin developing (NEXT TASK)
 
 Using Hemingway Bridges has allowed me to cut down on the time needed to complete certain types of tasks. Where I used to run myself in circles to solve problems, I now find it much easier to come back with fresh eyes.
 
 If you've never tried this method for yourself, I encourage you to try it for yourself this week.
 
-### Recommended reading:
+## Recommended reading:
 - [Cal Newport, Deep Work](https://a.co/d/8T8nyEp)
 - [Tom Bills, The Hemingway Bridge Method and How to Use It](https://theartoflutherie.com/hemingway-bridge-method/)
 - [Michael Barlow, The Hemingway Bridge as an End of Week Unplug Process](https://www.barlows.blog/my-end-of-week-review-process/)
